--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="images/image1.jpg">
+      <img class="d-block img-fluid" src="image1.jpg">
       	<div class="carousel-caption">
       		<h5>How To Read The Bible</h5>
       	</div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="images/image5.jpg">
+      <img class="d-block img-fluid" src="image5.jpg">
       	<div class="carousel-caption">
       		<h5>The Ressurection of Jesus</h5>
       	</div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="images/image10.jpg">
+      <img class="d-block img-fluid" src="image10.jpg">
       	<div class="carousel-caption">
       		<h5>God Is With You In Your Struggles</h5>
       	</div>
