--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Glenn's Blogsite</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
@@ -16,30 +17,35 @@
 <!--navigationBar-->
 <section id="nav-bar">
 	<nav class="navbar navbar-expand-lg navbar-light">
-	  <a class="navbar-brand" href="#">G.T</a>
+	  <a class="navbar-title" href="#"><h4>G.T</h4></a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
 	    <ul class="navbar-nav ml-auto">
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">HOME</a>
+	        <a class="nav-link" href="#top">HOME</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">ABOUT ME</a>
+	        <a class="nav-link" href="#about">ABOUT ME</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#">BLOGS</a>
+	        <a class="nav-link" href="#blog">BLOGS</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#" >OUR TEAM</a>
+	        <a class="nav-link" href="#team" >OUR TEAM</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#" >SUPPORT ME</a>
+	        <a class="nav-link" href="#support" >SUPPORT ME</a>
+	       </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#" >TESTIMONIALS</a>
+	        <a class="nav-link" href="#price" >PRICE PLANS</a>
+	       </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#" >CONTACT US</a>
+	        <a class="nav-link" href="#testimonials" >TESTIMONIALS</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#contact" >CONTACT US</a>
 	      </li>
 	      </li>
 	      </li>
@@ -58,21 +64,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block img-fluid" src="image1.jpg">
+      <a href="../biblepage/biblepage.html"><img class="d-block img-fluid" src="../images/image1.jpg"></a>
       	<div class="carousel-caption">
-      		<h5>How To Read The Bible</h5>
+      		<a href="../biblepage/biblepage.html"><h5>How To Read The Bible</h5></a>
       	</div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="image5.jpg">
+      <img class="d-block img-fluid" src="../images/image5.jpg">
       	<div class="carousel-caption">
-      		<h5>The Ressurection of Jesus</h5>
+      		<a href="../biblepage/biblepage.html"><h5>The Ressurection of Jesus</h5></a>
       	</div>
     </div>
     <div class="carousel-item">
-      <img class="d-block img-fluid" src="image10.jpg">
+      <img class="d-block img-fluid" src="../images/image10.jpg">
       	<div class="carousel-caption">
-      		<h5>God Is With You In Your Struggles</h5>
+      		<a href="../biblepage/biblepage.html"><h5>God Is With You In Your Struggles</h5></a>
       	</div>
     </div>
   </div>
@@ -88,36 +94,36 @@
 </div>
 	<!----About-->
 <section id="about">
-<div class="container">
-<div class="row">
-<div class="col-md-6">
-<h2>About Me</h2>
-<div class="about-content">
-I've personally struggled with the Christian faith and have some questions of my own, and thus i have searched for answers online. Through this website, i hope to shed some light on some of the difficult questions about Christianity, as well as to dispell some misconception about the faith. Have a question? Feel free to let me know in the 'contact us' section!
-</div>
-<button type="button" class="btn btn-primary">Read more>>
-</button>
-</div>
-<div class="col-md-6 skills-bar">
-	<p>Devotional Materials</p>
-	<div class="progress">
-		<div class="progress-bar" style="width: 80%;">80%</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h2>About Me</h2>
+				<div class="about-content">
+					I've personally struggled with the Christian faith and have some questions of my own, and thus i have searched for answers online. Through this website, i hope to shed some light on some of the difficult questions about Christianity, as well as to dispell some misconception about the faith. Have a question? Feel free to let me know in the 'contact us' section!
+				</div>
+				<a href="../biblepage/biblepage.html"><button type="button" class="btn btn-primary">Read more>>
+				</button></a>
+			</div>
+			<div class="col-md-6 skills-bar">
+				<p>Devotional Materials</p>
+				<div class="progress">
+					<div class="progress-bar" style="width: 80%;">80%</div>
+				</div>
+				<p>Praise and Worship</p>
+				<div class="progress">
+					<div class="progress-bar" style="width: 85%;">85%</div>
+				</div>
+				<p>Skepticism and Doubts</p>
+				<div class="progress">
+					<div class="progress-bar" style="width: 75%;">75%</div>
+				</div>
+				<p>Videos on Faith</p>
+				<div class="progress">
+					<div class="progress-bar" style="width: 50%;">50%</div>
+				</div>
+			</div>
+		</div>
 	</div>
-	<p>Praise and Worship</p>
-	<div class="progress">
-		<div class="progress-bar" style="width: 85%;">85%</div>
-	</div>
-	<p>Skepticism and Doubts</p>
-	<div class="progress">
-		<div class="progress-bar" style="width: 75%;">75%</div>
-	</div>
-	<p>Videos on Faith</p>
-	<div class="progress">
-		<div class="progress-bar" style="width: 50%;">50%</div>
-	</div>
-</div>
-</div>
-</div>
 </section>
 	<!-----Blogs--->
 	<section id="blog">
@@ -126,28 +132,28 @@ I've personally struggled with the Christian faith and have some questions of my
 			<div class="row blog">
 				<div class="col-md-3 text-center">
 					<div class="icon">
-					<i class="fas fa-church"></i>	 
+					<i class="fa fa-church"></i>	 
 					</div> 
 					<h3>Church</h3>
 					<p>A Place of Worship For Christians</p>
 				</div>
 				<div class="col-md-3 text-center">
 					<div class="icon">
-					<i class="fas fa-bible"></i> 
+					<i class="fa fa-bible"></i> 
 					</div> 
 					<h3>Bible</h3>
 					<p>The Holy Book, Considered To Be The Word Of God For Christians</p>
 				</div>
 				<div class="col-md-3 text-center">
 					<div class="icon">
-					<i class="fas fa-candy-cane"></i>	 
+					<i class="fa fa-candy-cane"></i>	 
 					</div> 
 					<h3>Christmas</h3>
 					<p>The Day Of Birth Of Jesus Christ</p>
 				</div>
 				<div class="col-md-3 text-center">
 					<div class="icon">
-					<i class="fas fa-bread-slice"></i>	 
+					<i class="fa fa-bread-slice"></i>	 
 					</div> 
 					<h3>Daily Bread</h3>
 					<p>Click Here To Get Your Daily Bread</p>
@@ -159,14 +165,223 @@ I've personally struggled with the Christian faith and have some questions of my
 <section id="team">
 <div class="container">
 	<h1>Our Team</h1>
+	<div class="row">
+	<div class="col-md-3 profile-pic text-center">
+	<div class="img-box">
+	<img src="../images/Gigi.jpg" class="img-responsive">
+	<ul>
+	<a href="#"><li><i class="fa fa-facebook-f"></i></li></a>
+	<a href="#"><li><i class="fa fa-twitter"></i></li></a>
+	<a href="#"><li><i class="fa fa-linkedin"></i></li></a>
+	</ul>
+	</div>
+		<h2> Gigi Hadid </h2>
+		<h3> A Famous Celebrity </h3>
+		<p> Not Really Sure What She Does</p>
+	</div>
+		<div class="col-md-3 profile-pic text-center">
+	<div class="img-box">
+	<img src="../images/Jesus.jpg" class="img-responsive">
+	<ul>
+	<a href="#"><li><i class="fa fa-facebook-f"></i></li></a>
+	<a href="#"><li><i class="fa fa-twitter"></i></li></a>
+	<a href="#"><li><i class="fa fa-linkedin"></i></li></a>
+	</ul>
+	</div>
+		<h2> Jesus Christ </h2>
+		<h3> The One And Only True Son Of God </h3>
+		<p> He Is Not Here, He Has Risen And Is In Heaven</p>
+	</div>
+		<div class="col-md-3 profile-pic text-center">
+	<div class="img-box">
+	<img src="../images/justin.jpg" class="img-responsive">
+	<ul>
+	<a href="#"><li><i class="fa fa-facebook-f"></i></li></a>
+	<a href="#"><li><i class="fa fa-twitter"></i></li></a>
+	<a href="#"><li><i class="fa fa-linkedin"></i></li></a>
+	</ul>
+	</div>
+		<h2> Justin Bieber </h2>
+		<h3> Pop Singer </h3>
+		<p> Broke His Voice At Not-So-Tender Age Of 17 </p>
+	</div>
+		<div class="col-md-3 profile-pic text-center">
+	<div class="img-box">
+	<img src="../images/michael.jpg" class="img-responsive">
+	<ul>
+	<a href="#"><li><i class="fa fa-facebook-f"></i></li></a>
+	<a href="#"><li><i class="fa fa-twitter"></i></li></a>
+	<a href="#"><li><i class="fa fa-linkedin"></i></li></a>
+	</ul>
+	</div>
+		<h2> Michael Jackson </h2>
+		<h3> Dubbed The 'King Of Pop' </h3>
+		<p> Some Say He Is Moonwalking In Heaven...</p>
+	</div>
+	</div>
 </div>
 </section>
 <!----Support Me--->
 	<section id="support">
 	<div class="container">
 		<p>Support Me If You Like My Content!</p>
-		<a href="#" class="btn btn-primary">Contact Me</a> 
+		<a href="#contact" class="btn btn-primary">Contact Me</a> 
 	</div>
 	</section>
+<!-- Price-->
+<section id="price">
+<div class="price">
+	<h1>Price Plans</h1>
+	<div class="row">
+		<div class="col-md-3">
+			<div class="single-price">
+				<div class="price-head">
+					<h2>Free</h2>
+					<p>$0/<span>month</span></p>
+				</div>
+				<div class="price-content">
+					<ul>
+						<li><i class="fa fa-check"></i>5GB Space</li>
+						<li><i class="fa fa-check"></i>10GB Bandwidth</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Domain</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Support</li> 
+					</ul>
+				</div>
+				<div class="price-button">
+					<a class="buy-btn" href="#">Join Free</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="single-price">
+				<div class="price-head">
+					<h2>Free</h2>
+					<p>$0/<span>month</span></p>
+				</div>
+				<div class="price-content">
+					<ul>
+						<li><i class="fa fa-check"></i>5GB Space</li>
+						<li><i class="fa fa-check"></i>10GB Bandwidth</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Domain</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Support</li> 
+					</ul>
+				</div>
+				<div class="price-button">
+					<a class="buy-btn" href="#">Join Free</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="single-price">
+				<div class="price-head">
+					<h2>Free</h2>
+					<p>$0/<span>month</span></p>
+				</div>
+				<div class="price-content">
+					<ul>
+						<li><i class="fa fa-check"></i>5GB Space</li>
+						<li><i class="fa fa-check"></i>10GB Bandwidth</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Domain</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Support</li> 
+					</ul>
+				</div>
+				<div class="price-button">
+					<a class="buy-btn" href="#">Join Free</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="single-price">
+				<div class="price-head">
+					<h2>Free</h2>
+					<p>$0/<span>month</span></p>
+				</div>
+				<div class="price-content">
+					<ul>
+						<li><i class="fa fa-check"></i>5GB Space</li>
+						<li><i class="fa fa-check"></i>10GB Bandwidth</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Domain</li>
+						<li><i class="fa fa-times-circle"></i>Unlimited Support</li> 
+					</ul>
+				</div>
+				<div class="price-button">
+					<a class="buy-btn" href="#">Join Free</a>
+				</div>
+			</div>
+		</div>	
+	</div>
+</div>
+</section>
+      <!-------Testimonials--------->
+<section id="testimonials">
+<div class="container">
+<h1>Testimonials</h1>
+<p class="text-center">Hear from our clients!</p>
+<div class="row">
+	<div class="col-md-4 text center">
+		<div class="profile">
+		<img src= "../images/image6.jpg" class="user">
+		<blockquote>I've personally struggled with the Christian faith and have some questions of my own, and thus i have searched for answers online. Through this website, i hope to shed some light on some of the difficult questions about Christianity, as well as to dispell some misconception about the faith. Have a question? Feel free to let me know in the 'contact us' section!</blockquote>
+			<h3>Glenn Tay<span>Professional procrastinator</span></h3>
+		</div>
+	</div>
+		<div class="col-md-4 text center">
+		<div class="profile">
+		<img src= "../images/image6.jpg" class="user">
+		<blockquote>I've personally struggled with the Christian faith and have some questions of my own, and thus i have searched for answers online. Through this website, i hope to shed some light on some of the difficult questions about Christianity, as well as to dispell some misconception about the faith. Have a question? Feel free to let me know in the 'contact us' section!</blockquote>
+			<h3>Glenn Tay<span>Professional procrastinator</span></h3>
+		</div>
+	</div>
+</div>
+</div>
+</section>
+	<!-----------Get in touch-------->
+<section id="contact">
+	<div class="container">
+		<h1> Get In Touch </h1>
+		<div class="row">
+			<div class="col-md-6">
+			<form class="contact-form">
+				<div class="form-group">
+					<input type="text" class="form control" placeholder="Your name">
+				</div>
+				<div class="form-group">
+					<input type="number" class="form control" placeholder="Phone Number">
+				</div>
+				<div class="form-group">
+					<input type="email" class="form control" placeholder="Email Address">
+				</div>
+				<div class="form-group">
+					<textarea class="form control" rows="4" cols="50" placeholder="Message"></textarea>
+				</div>
+				<button type="submit" class="btn btn-primary">Send Message</button>
+			</form>
+		</div>
+		<div class="col-md-6 contact-info"> 	
+			<div class="follow"><b>Address:</b><i class="fa fa-map-marker"></i>XYZ Road, Singapore</div>
+			<div class="follow"><b>Phone:</b><i class="fa fa-phone"></i>1234567890</div>	
+			<div class="follow"><b>Email:</b><i class="fa fa-envelope-o"></i>example.website.com</div>
+			<div class="follow"><label><b>Social:</b></label>
+				<a href="#"><i class="fa fa-facebook-f"></i></a>
+				<a href="#"><i class="fa fa-youtube-play"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-google-plus"></i></a>
+			</div>	
+		</div> 
+		</div>
+	</div>
+</div>
+</section>
+<!----------Footer------>
+<section id="footer">
+	<div class="container text-center">
+		<p>Made with <i class="fa fa-heart-o"></i> by me</p>
+	</div>
+</section>
+<!------- Footer end----->
+<script src="js/smooth-scroll.polyfills.min.js"></script>
+<script>
+	var scroll = new SmoothScroll('a[href*="#"]');
+</script>
 </body>
 </html>
